Work in progress

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
   "require": {
-    "nategood/httpful": "0.2.*"
+    "nategood/httpful": "0.2.*",
+    "hassankhan/config": "^2.0"
+  },
+
+  "autoload": {
+    "psr-4": {
+      "UniFiNVR\\":"classes/UniFiNVR"
+    }
   }
 }
